force-app/main/default/objects/Factura__c/Factura__c.object-meta.xml
<CustomObject>
    <label>Factura</label>
    <nameField>
        <label>Factura Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>