force-app/main/default/objects/Factura__c/fields/ComprobarContacto__c.field-meta.xml
<CustomField>
    <fullName>ComprobarContacto__c</fullName>
    <formula>NOT(ISBLANK( Cuenta_administrativo__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ComprobarContacto</label>
    <type>Checkbox</type>
</CustomField>