force-app/main/default/objects/Factura__c/fields/Cuenta_administrativo__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_administrativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto administrativo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contacto__c.Name</field>
            <operation>equals</operation>
            <valueField>$User.Alias</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contacto__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas1</relationshipName>
    <type>Lookup</type>
</CustomField>