force-app/main/default/objects/Factura__c/fields/Fecha_de_cobro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_cobro__c</fullName>
    <label>Fecha de cobro</label>
    <type>Date</type>
</CustomField>