force-app/main/default/objects/Factura__c/fields/Importe_total__c.field-meta.xml
<CustomField>
    <fullName>Importe_total__c</fullName>
    <formula>Importe_neto__c*Porcentaje_de_IVA__c+Importe_neto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>