force-app/main/default/objects/Factura__c/fields/Numero_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_factura__c</fullName>
    <displayFormat>F-{YYYY}{MM}{DD}-{00000}</displayFormat>
    <label>Número de factura</label>
    <type>AutoNumber</type>
</CustomField>