force-app/main/default/objects/Factura__c/fields/Oportunidad_asociada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_asociada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad asociada</label>
    <referenceTo>Oportunidad__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>