force-app/main/default/objects/Factura__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>https://elpais.com/</description>
    <label>Pais</label>
    <type>Url</type>
</CustomField>