force-app/main/default/objects/Factura__c/fields/Porcentaje_de_IVA__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_IVA__c</fullName>
    <label>Porcentaje de IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>