force-app/main/default/objects/Factura__c/validationRules/Emitida.validationRule-meta.xml
<ValidationRule>
    <fullName>Emitida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Estado__c, &quot;Emitida&quot;),
  ISCHANGED(Estado__c)
)</errorConditionFormula>
    <errorMessage>Una vez que la factura esté en estado emitida, no puede ser modificada.</errorMessage>
</ValidationRule>