force-app/main/default/objects/Factura__c/validationRules/Fecha_caducada.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_caducada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Fecha_de_cobro__c)),
  Fecha_de_cobro__c &lt;= TODAY()
)</errorConditionFormula>
    <errorMessage>La fecha de cobro debe ser superior a la fecha actual.</errorMessage>
</ValidationRule>